implementations/rust/ockam/ockam/tests/node_test/fail_if_arg_is_self.rs
#[ockam::test]
async fn my_test(self) -> ockam_core::Result<()> {}

fn main() {}
